[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnifold"
dynamic = ["version"]
description = "OmniFold: iterative unfolding with machine learning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Anders Andreassen"},
    {name = "Patrick Komiske"},
    {name = "Eric Metodiev"},
    {name = "Benjamin Nachman"},
    {name = "Adi Suresh"},
    {name = "Jesse Thaler"},
]
dependencies = [
    "numpy",
    "scikit-learn",
    "tensorflow>=2.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]

[project.urls]
Homepage = "https://github.com/hep-lbdl/OmniFold"
Issues = "https://github.com/hep-lbdl/OmniFold/issues"

[tool.setuptools]
py-modules = ["omnifold"]

[tool.setuptools.dynamic]
version = {attr = "omnifold.__version__"}
